--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/carousel.js": "/js/carousel.js"
+    "/js/carousel.js": "/js/carousel.js",
+    "/js/dashboard.js": "/js/dashboard.js"
 }
