--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+# aggiunti per provare a risolvere i conflitti
+/public/js 
+/public/css
