--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/js/carousel.js": "/js/carousel.js",
-    "/js/popper.js": "/js/popper.js"
+    "/js/popper.js": "/js/popper.js",
+    "/js/showcart.js": "/js/showcart.js"
 }
